Fix alignment of frame buttons on sides of slides

--- a/app/assets/stylesheets/about_me_contents.css.scss
+++ b/app/assets/stylesheets/about_me_contents.css.scss
@@ -86,12 +86,12 @@
   list-style-type:none;
   border: black 1px solid;
   margin-top: -11px;
-  height: 452px;
+  height: 454px;
   width: 943px;
 
   .frame
   {
-    height: 454px;
+    height: 453px;
     width: 60px;
     background-color: rgba(28,28,28,0.3);
   }
